@@ -11,6 +11,16 @@ static void match_helper(const char *sub, const char *topic)
 	rc = mosquitto_topic_matches_sub(sub, topic, &match);
 	CU_ASSERT_EQUAL(rc, MOSQ_ERR_SUCCESS);
 	CU_ASSERT_EQUAL(match, true);
+	if(match == false){
+		printf("1: %s:%s\n", sub, topic);
+	}
+
+	rc = mosquitto_topic_matches_sub2(sub, strlen(sub), topic, strlen(topic), &match);
+	CU_ASSERT_EQUAL(rc, MOSQ_ERR_SUCCESS);
+	CU_ASSERT_EQUAL(match, true);
+	if(match == false){
+		printf("2: %s:%s\n", sub, topic);
+	}
 }
 
 static void no_match_helper(int rc_expected, const char *sub, const char *topic)
@@ -19,6 +29,13 @@ static void no_match_helper(int rc_expected, const char *sub, const char *topic)
 	bool match;
 
 	rc = mosquitto_topic_matches_sub(sub, topic, &match);
+	CU_ASSERT_EQUAL(rc, rc_expected);
+	if(rc != rc_expected){
+		printf("%d:%d %s:%s\n", rc, rc_expected, sub, topic);
+	}
+	CU_ASSERT_EQUAL(match, false);
+
+	rc = mosquitto_topic_matches_sub2(sub, strlen(sub), topic, strlen(topic), &match);
 	CU_ASSERT_EQUAL(rc, rc_expected);
 	if(rc != rc_expected){
 		printf("%d:%d %s:%s\n", rc, rc_expected, sub, topic);
