@@ -4,6 +4,11 @@
 Broker:
 - Fix bridge not respecting receive-maximum when reconnecting with MQTT v5.
 
+Client library:
+- Fix mosquitto_topic_matches_sub2() not using the length parameters.
+  Closes #2364.
+
+
 2.0.13 - 2021-10-27
 ===================
 
